# sgemm

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  env.yml  plot_perf.py  utils.cmake
csrc/: main.cu  runner.cu  runner.cuh
csrc/kernels/: 1_sgemm_naive.cuh  2_sgemm_gmem_coalesce.cuh  3_sgemm_smem_blocking.cuh  3_sgemm_smem_tiling.cuh  4_sgemm_1d_blocktiling.cuh
